# OMOMO2Isaac

./: .gitignore  LICENSE  README.md  pyproject.toml
robots/smplx/: sub10.xml  sub16.xml
scripts/: humanoid_dual_retarget.py  humanoid_retarget.py  process_obj_scale.py  process_omomo.py  vis_mujoco.py
utils/: cli_args.py  math.py  optimize.py  process.py  visualization.py
