[project]
name = "pipeline"
version = "0.1.0"
description = "Pipeline to process OMOMO dataset, generate corresponding smplx robot, and retarget to specific humanoid robot"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "human-body-prior",
    "joblib>=1.5.3",
    "mujoco>=3.4.0",
    "pyrootutils>=1.0.4",
    "smpl-sim",
    "torch>=2.5.1",
    "tqdm>=4.67.1",
    "trimesh>=4.11.1",
    "viser>=1.0.21",
]

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.uv.sources]
human-body-prior = { git = "https://github.com/nghorbani/human_body_prior.git" }
smpl-sim = { git = "https://github.com/ZhengyiLuo/SMPLSim.git" }
torch = { index = "pytorch-cu124" }